# python_csv_to_db

./: .gitignore  README.md  dev-requirements.txt  docker-compose.yaml  dot_env_example  pyproject.toml  requirements.txt
source/: app.py  config.py  data_models.py  database.py  import_books_dataset.py
source/books_data/: README.md
source/utils/: dataset_analyze.py
